# FypSim

./: .gitignore  CMakeLists.txt  DESCRIPTION  LICENSE  NAMESPACE  README.md
R/: ParametersEstimation.R  RcppExports.R  _package.R  dataCleaning.R  procedure.R
man/: FypSim.Rd  buildDesign.Rd  effectSizeCohen.Rd  estimateParametersGrm.Rd  glueDesignPieces.Rd  initializeDesign.Rd  runCell.Rd  runCellRange.Rd  runSelectedCells.Rd  runSelectedCellsWithReplication.Rd
src/: Calibration.cpp  Calibration.h  Cell.h  Design.cpp  Design.h  DesignProcedure.cpp  DesignProcedure.h  EnvironmentCallsR.cpp  EnvironmentCallsR.h  FypUtils.cpp  FypUtils.h  Procedure.cpp  Procedure.h  RcppExports.cpp  Statistics.cpp  Statistics.h  StudyPhase.cpp  StudyPhase.h  Utils.cpp  Utils.h  _procedure.cpp  procedure.cpp
